[tool.poetry]
name = "aw-import-screentime"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.dependencies]
python = "^3.8"
aw-core = "*"
aw-client = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "^6.2.3"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
